[package]
name = "solana-program-client"
version = "0.1.0"
edition = "2021"
description = "lightweight crate to call Solana programs"
license = "MIT"
homepage="https://github.com/cenwadike/solana-program-client"
repository="https://github.com/cenwadike/solana-program-client"
readme="README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
anchor-client = "0.30.0"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = "1.4.0"
serde_json = "1.0.117"
solana-address-lookup-table-program = "1.18.15"
solana-client = "1.18.9"
solana-sdk = "1.18.9"
solana-transaction-status = "1.18.15"

[dev-dependencies]
blob = { git = "https://github.com/cenwadike/blob.git"}
